--- a/src/global.css
+++ b/src/global.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
 html {
   font-size: 1.125rem;
   line-height: 1.6;
@@ -12,6 +14,9 @@ html {
 *::before,
 *::after {
   box-sizing: inherit;
+  margin: 0;
+  padding: 0;
+  font-family: 'Roboto', sans-serif;
 }
 
 body {
@@ -20,11 +25,9 @@ body {
   text-rendering: optimizeLegibility;
   background-image: linear-gradient(
     120deg,
-    #eea2a2 0,
-    #bbc1bf 19%,
-    #57c6e1 42%,
-    #b49fda 79%,
-    #7ac5d8 100%
+    #ecf0f1 0,
+    #ecf0f1 42%,
+    rgba(6, 82, 197, .1) 79%
   );
   background-size: 400% 400%;
   background-position: var(--bg-position);
